; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_close_stream.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http3client.c_close_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http3client_req_t = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_http3client_req_t*, i32)* @close_stream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_stream(%struct.st_h2o_http3client_req_t* %0, i32 %1) #0 {
  %3 = alloca %struct.st_h2o_http3client_req_t*, align 8
  %4 = alloca i32, align 4
  store %struct.st_h2o_http3client_req_t* %0, %struct.st_h2o_http3client_req_t** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %3, align 8
  %6 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %5, i32 0, i32 0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = call i32 @quicly_sendstate_transfer_complete(i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %2
  %12 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %3, align 8
  %13 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %12, i32 0, i32 0
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @quicly_reset_stream(%struct.TYPE_3__* %14, i32 %15)
  br label %17

17:                                               ; preds = %11, %2
  %18 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %3, align 8
  %19 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %18, i32 0, i32 0
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = call i32 @quicly_recvstate_transfer_complete(i32* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %30, label %24

24:                                               ; preds = %17
  %25 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %3, align 8
  %26 = getelementptr inbounds %struct.st_h2o_http3client_req_t, %struct.st_h2o_http3client_req_t* %25, i32 0, i32 0
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %26, align 8
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @quicly_request_stop(%struct.TYPE_3__* %27, i32 %28)
  br label %30

30:                                               ; preds = %24, %17
  %31 = load %struct.st_h2o_http3client_req_t*, %struct.st_h2o_http3client_req_t** %3, align 8
  %32 = call i32 @detach_stream(%struct.st_h2o_http3client_req_t* %31)
  ret void
}

declare dso_local i32 @quicly_sendstate_transfer_complete(i32*) #1

declare dso_local i32 @quicly_reset_stream(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @quicly_recvstate_transfer_complete(i32*) #1

declare dso_local i32 @quicly_request_stop(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @detach_stream(%struct.st_h2o_http3client_req_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
